# semsim

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: qc.yml
notebooks/: plot_old_versus_new_phenodigm_resnik_and_jaccard.ipynb
semsim/: __init__.py  cli.py  compute_hpo_similarities.py  compute_pairwise_similarities.py  extra_prefixes.py  get_phenodigm_pairs.py  process_ontology.py  run.py  utils.py
tests/: jaccard_out  test_compute_pairwise_similarities.py  test_get_phenodigm_pairs.py
tests/output/: jaccard_out
tests/resources/: test_hpo_edges.tsv  test_hpo_nodes.tsv  test_jaccard  test_mapping.csv  test_resnik
