[tool.poetry]
name = "semsim"
version = "0.1.0"
description = ""
authors = [
    "Justin Reese <JustinReese@lbl.gov>",
    "Harry Caufield <jhc@lbl.gov>",
    "Harshad Hegde <hhegde@lbl.com>",
    ]
readme = "README.md"
license = "BSD3"

[tool.poetry.dependencies]
python = "^3.9"
jaro-winkler = "2.0.0"
grape = "^0.1.10"
pandas = "^1.4.3"
tox = "^3.25.1"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
